Fix feedback bubble z-index and icon color

--- a/assets/main.scss
+++ b/assets/main.scss
@@ -220,6 +220,7 @@ $brand-dark:  $hel-tram;
     background: $hel-suomenlinna;
     border-bottom: 2px solid #FFF;
     border-right: 2px solid #FFF;
+    z-index: 1041;
   }
 
   &:hover {
@@ -241,7 +242,7 @@ $brand-dark:  $hel-tram;
       text-indent: 100%;
       white-space: nowrap;
       overflow: hidden;
-      background-image: url("data:image/svg+xml,%3Csvg id='3fe12ba8-7db0-4ffe-8486-a05d0cf9dec4' data-name='Layer 1' xmlns='http://www.w3.org/2000/svg' viewBox='0 0 512 512'%3E%3Ctitle%3Ecommenting-o%3C/title%3E%3Cg%3E%3Cpath d='M380.71,128.69a51.41,51.41,0,0,1,52,52V305.35c0,30.1-21.85,51.94-52,51.94l-20.76,0a92.07,92.07,0,0,0-52,15.89,92.07,92.07,0,0,0-52-15.89H235.22l-103.93,0c-30.11,0-52-21.84-52-51.94V180.65a51.41,51.41,0,0,1,52-52H380.71m0-31.18H131.29c-46.52,0-83.14,36.62-83.14,83.14V305.35c0,47.1,35.81,83.12,83.14,83.12l103.92,0H256a61.11,61.11,0,0,1,43.41,17.91l8.55,8.53,8.55-8.52a61.12,61.12,0,0,1,43.41-17.91l20.78,0c47.33,0,83.14-36,83.14-83.12V180.65c0-46.52-36.62-83.14-83.14-83.14Z'/%3E%3Cg%3E%3Crect x='135.45' y='185.84' width='241.1' height='31.18'/%3E%3Crect x='135.45' y='268.97' width='241.1' height='31.18'/%3E%3C/g%3E%3C/g%3E%3C/svg%3E");
+      background-image: url("data:image/svg+xml,%3Csvg id='_x33_fe12ba8-7db0-4ffe-8486-a05d0cf9dec4' xmlns='http://www.w3.org/2000/svg' viewBox='0 0 512 512'%3E%3Cstyle%3E.st0%7Bfill:%23fff%7D%3C/style%3E%3Cpath class='st0' d='M380.7 128.7c28.4-.3 51.7 22.4 52 50.8v125.9c0 30.1-21.9 51.9-52 51.9h-20.8c-18.5-.1-36.7 5.5-52 15.9-15.3-10.4-33.5-15.9-52-15.9H131.3c-30.1 0-52-21.8-52-51.9V180.6c-.3-28.4 22.4-51.7 50.8-52h1.2l249.4.1m0-31.2H131.3c-46.5 0-83.1 36.6-83.1 83.1v124.7c0 47.1 35.8 83.1 83.1 83.1H256c16.3 0 31.9 6.4 43.4 17.9l8.5 8.5 8.5-8.5c11.5-11.5 27.1-18 43.4-17.9h20.8c47.3 0 83.1-36 83.1-83.1V180.6c.1-46.5-36.5-83.1-83-83.1z'/%3E%3Cpath class='st0' d='M135.4 185.8h241.1V217H135.4zM135.4 269h241.1v31.2H135.4z'/%3E%3C/svg%3E");
       background-size: 70%;
       background-position: center;
       background-repeat: no-repeat;
